--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,8 @@
            <div class="row vh-100">
                <div class="col d-flex justify-content-center my-5 flex-column">
                    <div class="text-login">
-                       <p>Organize suas financias de uma forma fácil.</p>
-                       <p>Controle seu dinheiro e investimentos.</p>
-                       <p>Economize e atinja seus objetivos.</p>
+                       <p>Ajuste suas financias de uma forma fácil.</p>
+                       <p>Controle seu dinheiro e investimentos.</p>                       
                    </div>
                    <div class="text-center">
                        <img src="../assets/images/pocket.png" alt="radinho" class="image-fluid" srcset="">
