--- a/public/home.html
+++ b/public/home.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand bg-white ">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                  <img src="../public/assets/images/nikel-small-logo.png" alt="logo nikel" class="img-fluid" srcset="">
+                  <img src="../assets/images/nikel-small-logo.png" alt="logo nikel" class="img-fluid" srcset="">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
                </div>
                <div class="col d-flex mt-4 justify-content-end">
                    <div class="text-bottom">
-                       <img src="../public/assets/images/coins-small.png" alt="moeda pequena " srcset="">
+                       <img src="../assets/images/coins-small.png" alt="moeda pequena " srcset="">
                    </div>
                </div>               
           </div>
@@ -140,6 +140,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-    <script src="../public/js/home.js"></script>
+    <script src="../js/home.js"></script>
 </body>
 </html>
