--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
                        
                    </div>
                    <div class="text-center">
-                       <img src="../public/assets/images/pocket.png" alt="radinho" class="image-fluid" srcset="">
-                       <img src="../public/assets/images/coins.png" alt="moeda" class="image-fluid d-none d-md-inline coins" srcset="">
+                       <img src="../assets/images/pocket.png" alt="radinho" class="image-fluid" srcset="">
+                       <img src="../assets/images/coins.png" alt="moeda" class="image-fluid d-none d-md-inline coins" srcset="">
                    </div>
                </div>
                <div class="col d-flex justify-content-center my-5 flex-column">
@@ -28,7 +28,7 @@
                        <div class="row">
                            <div class="col">
                                <div class="text-center mb-3">
-                                   <img src="../public/assets/images/nikel-logo.png" alt="logo nikel" class="img-fluid" srcset="">
+                                   <img src="../assets/images/nikel-logo.png" alt="logo nikel" class="img-fluid" srcset="">
                                </div>
                            </div>
                        </div>
@@ -61,14 +61,14 @@
                        <div class="row">
                            <div class="col">
                                <div class="text-center mt-5">
-                                   <img src="../public/assets/images/codai-logo.png" alt="logo codaí" srcset="">
+                                   <img src="../assets/images/codai-logo.png" alt="logo codaí" srcset="">
                                </div>
                            </div>
                        </div>
                        <div class="row">
                         <div class="col">
                             <div class="text-center">
-                                <img src="../public/assets/images/growdev-logo.png" alt="logo growdev" srcset="">
+                                <img src="../assets/images/growdev-logo.png" alt="logo growdev" srcset="">
                             </div>
                         </div>
                     </div>
@@ -112,6 +112,6 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-    <script src="../public/js/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 </html>
