Correção bug pagina transaction

--- a/public/transactions.html
+++ b/public/transactions.html
@@ -93,8 +93,8 @@
                 <div class="modal-body">
             
                 <div class="mb-3">
-                  <label for="value-create-input" class="form-label">Valor</label>
-                  <input type="number" step="any" class="form-control" id="value-create-input" aria-describedby="emailHelp">
+                  <label for="value-input" class="form-label">Valor</label>
+                  <input type="number" step="any" class="form-control" id="value-input" aria-describedby="emailHelp">
                   
                 </div>
                 <div class="mb-3">
