--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
                    <div class="text-login">
                        <p>Ajuste suas financias de uma forma fácil.</p>
                        <p>Controle seu dinheiro e investimentos.</p>
+                       <p>Economize e atinja seus objetivos.</p>
                        
                    </div>
                    <div class="text-center">
