--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            <div class="row vh-100">
                <div class="col d-flex justify-content-center my-5 flex-column">
                    <div class="text-login">
-                       
+                       <p>Ajuste suas financias de uma forma fácil.</p>
                        <p>Controle seu dinheiro e investimentos.</p>
                        <p>Economize e atinja seus objetivos.</p>
                        
